third_party/move/move-prover/tests/sources/functional/proof/let_binding.exp
Move prover returns: exiting with verification errors
error: proof assertion not satisfied
   ┌─ tests/sources/functional/proof/let_binding.move:72:14
   │
72 │         post assert expected == result;  // error: x+3 != x+2
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/proof/let_binding.move:64: offset_by_two
   =     at tests/sources/functional/proof/let_binding.move:71: offset_by_two (spec)
   =     at tests/sources/functional/proof/let_binding.move:68: offset_by_two (spec)
   =     at tests/sources/functional/proof/let_binding.move:64: offset_by_two
   =         x = <redacted>
   =     at tests/sources/functional/proof/let_binding.move:65: offset_by_two
   =         result = <redacted>
   =     at tests/sources/functional/proof/let_binding.move:66: offset_by_two
   =     at tests/sources/functional/proof/let_binding.move:72: offset_by_two (spec)
